Changed version to 1.0 and updated examples.